--- a/about-us.html
+++ b/about-us.html
@@ -182,28 +182,28 @@
 						<div class="col">
 							<ul>
 								<li class="lead mb-4">Vous êtes jeune diplômé et vous avez des idées de projets très innovantes et à forte valeur ajoutée ;</li>
-								<li class="lead mb-4">Vous vous êtes récemment lancés ou vous souhaitez vous lancer dans un projet de création d’entreprise ? </li>
-								<li class="lead mb-4">Vous souhaitez vous entourer de l’expertise nécessaire et vous donner les moyens financiers
+								<li class="lead mb-4">Vous vous êtes récemment lancés ou vous souhaitez vous lancer dans un projet de création d'entreprise ? </li>
+								<li class="lead mb-4">Vous souhaitez vous entourer de l'expertise nécessaire et vous donner les moyens financiers
 								adéquats pour renforcer le décollage de votre projet ?</li>
-								<li class="lead mb-4">Vous êtes entrepreneur avec une expérience avérée dans votre secteur d’activité et vous avez des
+								<li class="lead mb-4">Vous êtes entrepreneur avec une expérience avérée dans votre secteur d'activité et vous avez des
 								idées innovantes pour améliorer votre productivité et accroitre votre marché,</li>
 							</ul>
 
-							<p>Le Fonds d’Appui Catalytique et de Solidarité (FACS), un programme de financement et d ’accompagne-
-								ment des entrepreneur(e)s créé par la Chambre de Commerce et d’Industrie du Bénin (CCI Bénin) et la
+							<p>Le Fonds d'Appui Catalytique et de Solidarité (FACS), un programme de financement et d 'accompagne-
+								ment des entrepreneur(e)s créé par la Chambre de Commerce et d'Industrie du Bénin (CCI Bénin) et la
 								Caisse des Dépôts et de Consignations du Bénin (CDC Bénin) vous apporte la solution.
-								Le FACS a pour objectif de faire émerger une nouvelle génération d’entrepreneurs champions, capables
+								Le FACS a pour objectif de faire émerger une nouvelle génération d'entrepreneurs champions, capables
 								de développer des entreprises à forte valeur ajoutée et de catalyser la transformation productive de
-								l’économie béninoise.</p>
+								l'économie béninoise.</p>
 								<p>Le programme offrira aux entrepreneur(e)s sélectionné(e)s un financement en fonds propres et quasi -
-								fonds propres, pouvant aller jusqu’à 200 millions en contrepartie d'une participation minoritaire, et un
+								fonds propres, pouvant aller jusqu'à 200 millions en contrepartie d'une participation minoritaire, et un
 								accompagnement stratégique et opérationnel, pré investissement et post investissement.</p>
 								
 								<p>Pour être éligible au programme FACS, il faut : </p>
 								<ul>
-									<li>Avoir un projet de création d’entreprise ou une entreprise en amorçage (moins de 5 ans) ou en crois-
-									sance qui justifie d’une expérience avérée en lien avec le secteur d’activité cible ;</li>
-									<li>Avoir un marché profond et/ou en forte croissance dans les secteurs de l’agriculture, de la petite
+									<li>Avoir un projet de création d'entreprise ou une entreprise en amorçage (moins de 5 ans) ou en crois-
+									sance qui justifie d'une expérience avérée en lien avec le secteur d'activité cible ;</li>
+									<li>Avoir un marché profond et/ou en forte croissance dans les secteurs de l'agriculture, de la petite
 									industrie et des services aux Bâtiments et Travaux Publics ;</li>
 									<li>Avoir des projections financières à horizon 5-6 ans ;</li>
 								</ul>
@@ -222,13 +222,13 @@
 									<div class="col-lg-6">
 										<ul class="list list-icons list-icons-style-3 list-tertiary">
 											<li><i class="fas fa-chevron-right"></i> <b>POSITIONNEMENT</b><br>
-												Le Fonds d’Appui Catalytique et de Solidarité est un programme d’accompagnement
+												Le Fonds d'Appui Catalytique et de Solidarité est un programme d'accompagnement
 												et de financement :
 												<ul>
-													<li>d’entreprises innovantes (start up), en amorçage ou en croissance;</li>
-													<li>de projets ambitieux et à fort potentiel de croissance dans les secteurs de l’agriculture de la petite industrie et des services aux Bâtiments et Travaux Publics</li></ul></li>
+													<li>d'entreprises innovantes (start up), en amorçage ou en croissance;</li>
+													<li>de projets ambitieux et à fort potentiel de croissance dans les secteurs de l'agriculture de la petite industrie et des services aux Bâtiments et Travaux Publics</li></ul></li>
 											<li><i class="fas fa-chevron-right"></i>
-												<b>MODE D’INTERVENTION</b><br>
+												<b>MODE D'INTERVENTION</b><br>
 												Prise de participation dans des sociétés— projets au stade de création (< 1an) ou en
 	amorçage (< 5 ans) ou en croissance (indifférent)
 											</li>
@@ -243,18 +243,18 @@
 									<div class="col-lg-6">
 										<ul class="list list-icons list-icons-style-3 list-tertiary">
 											<li><i class="fas fa-chevron-right"></i> 
-												<b>INSTRUMENT D’INTERVENTION</b><br>
+												<b>INSTRUMENT D'INTERVENTION</b><br>
 												<ul>
 													<li>Investissement en fonds propres et quasi-fonds propres</li>
-													<li>Start up ( 1 à 5 millions) - amorçage (5 à 30 millions) - croissance (jusqu’à 200 millions)</li>
+													<li>Start up ( 1 à 5 millions) - amorçage (5 à 30 millions) - croissance (jusqu'à 200 millions)</li>
 												</ul>
 											</li>
 											<li><i class="fas fa-chevron-right"></i> 
-												<b>DUREE D’INVESTISSEMENT</b><br>
+												<b>DUREE D'INVESTISSEMENT</b><br>
 												<ul>
 													<li>Pas de durée de référence – en moyenne entre 5 et 6 ans</li>
-													<li>Sortie dès que possible au profit des Entrepreneurs ; d’un fonds d’investisse-
-														ment ; d’un opérateur stratégique ou sur le marché</li>
+													<li>Sortie dès que possible au profit des Entrepreneurs ; d'un fonds d'investisse-
+														ment ; d'un opérateur stratégique ou sur le marché</li>
 												</ul>
 											</li>
 										</ul>
