--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 					<div class="owl-stage-outer">
 						<div class="owl-stage">
 							<!-- Carousel Slide 1 -->
-							<div class="owl-item position-relative pt-5" style="background-image: url(img/gallery/IMG_20200724_092216-FILEminimizer.jpg); background-size: cover; background-position: center;">
+							<div class="sdw-inset owl-item position-relative pt-5" style="background-image: url(img/APC_5387.jpg); background-size: cover; background-position: center;">
 								<div class="container position-relative z-index-3 pb-5 h-100">
 									<div class="row align-items-center pb-5 h-100">
 										<div class="col">
@@ -180,7 +180,7 @@
 							</div>
 
 							<!-- Carousel Slide 2 -->
-							<div class="owl-item position-relative pt-5" style="background-image: url(img/gallery/DSC_2081-FILEminimizer.jpg); background-size: cover; background-position: center;">
+							<div class="sdw-inset owl-item position-relative pt-5" style="background-image: url(img/APC_5395.jpg); background-size: cover; background-position: center;">
 								<div class="container position-relative z-index-3 pb-5 h-100">
 									<div class="row align-items-center pb-5 h-100">
 										<div class="col">
@@ -190,6 +190,7 @@
 									</div>
 								</div>
 							</div>
+
 
 						</div>
 					</div>
@@ -235,13 +236,13 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-6 col-lg-6">
-								<h2 class="font-weight-bold text-color-dark">Fonds d’Appui Catalytique et de Solidarité</h2>
-								<p class="ps-4">Le Fonds d’Appui Catalytique et de Solidarité (FACS), un programme de financement et d ’accompagne-
-									ment des entrepreneur(e)s créé par la Chambre de Commerce et d’Industrie du Bénin (CCI Bénin) et la
+								<h2 class="font-weight-bold text-color-dark">Fonds d'Appui Catalytique et de Solidarité</h2>
+								<p class="ps-4">Le Fonds d'Appui Catalytique et de Solidarité (FACS), un programme de financement et d 'accompagne-
+									ment des entrepreneur(e)s créé par la Chambre de Commerce et d'Industrie du Bénin (CCI Bénin) et la
 									Caisse des Dépôts et de Consignations du Bénin (CDC Bénin) vous apporte la solution.
-									Le FACS a pour objectif de faire émerger une nouvelle génération d’entrepreneurs champions, capables
+									Le FACS a pour objectif de faire émerger une nouvelle génération d'entrepreneurs champions, capables
 									de développer des entreprises à forte valeur ajoutée et de catalyser la transformation productive de
-									l’économie béninoise.</p>
+									l'économie béninoise.</p>
 								<div class="ps-4">
 									<!--div class="row">
 										<div class="col-lg-6">
@@ -326,7 +327,7 @@
 										</div>
 										<div class="feature-box-info ms-3">
 											<h4 class="font-weight-normal text-5">Accompanement</h4>
-											<p class="text-2">Le FACS offre un accompagnement complet aussi bien en phase de pré investissement, qu’en phase d’investissement, avec l’appui d’experts, qui apporteront une assistance technique à l’amélioration et l’optimisation des plans d’affaires, l’analyse et l’atténuation des risques, la création d’un écosystème favorable, ainsi qu’au pilotage opérationnel.</p>
+											<p class="text-2">Le FACS offre un accompagnement complet aussi bien en phase de pré investissement, qu'en phase d'investissement, avec l'appui d'experts, qui apporteront une assistance technique à l'amélioration et l'optimisation des plans d'affaires, l'analyse et l'atténuation des risques, la création d'un écosystème favorable, ainsi qu'au pilotage opérationnel.</p>
 										</div>
 									</div>
 								</a>
@@ -339,7 +340,7 @@
 										</div>
 										<div class="feature-box-info ms-3">
 											<h4 class="font-weight-normal text-5">Financement</h4>
-											<p class="text-2">Le FACS financera les projets à forte valeur ajoutée jusqu’à trois cent millions (300.000.000) de FCFA en fonds propres et quasi-fonds propres, étalé sur toute la durée d’investissement, et favorisera un effet levier permettant d’assurer les besoins d'investissements futurs et prédictibles de la société, sous réserve de l'atteinte d'objectifs déterminés ou de la réalisation des conditions suspensives.</p>
+											<p class="text-2">Le FACS financera les projets à forte valeur ajoutée jusqu'à trois cent millions (300.000.000) de FCFA en fonds propres et quasi-fonds propres, étalé sur toute la durée d'investissement, et favorisera un effet levier permettant d'assurer les besoins d'investissements futurs et prédictibles de la société, sous réserve de l'atteinte d'objectifs déterminés ou de la réalisation des conditions suspensives.</p>
 										</div>
 									</div>
 								</a>
@@ -567,7 +568,7 @@
 							<a href="cases-detail.html" class="text-decoration-none">
 								<span class="thumb-info custom-thumb-info-style-1 thumb-info-hide-wrapper-bg">
 									<span class="thumb-info-wrapper m-0">
-										<img src="img/gallery/case-1.jpg" class="img-fluid" alt="">
+										<img src="img/APC_5395.jpg" class="img-fluid" alt="">
 									</span>
 									<span class="thumb-info-caption bg-color-secondary p-4 pt-5 pb-5">
 										<span class="custom-thumb-info-title">
@@ -582,7 +583,7 @@
 							<a href="cases-detail.html" class="text-decoration-none">
 								<span class="thumb-info custom-thumb-info-style-1 thumb-info-hide-wrapper-bg">
 									<span class="thumb-info-wrapper m-0">
-										<img src="img/avatars/EE3051E5-454C-4841-A285-7AAF4C7F63F9.webp" alt="" class="img-fluid" />
+										<img src="img/APC_5317.jpg" alt="" class="img-fluid" />
 									</span>
 									<span class="thumb-info-caption bg-color-secondary p-4 pt-5 pb-5">
 										<span class="custom-thumb-info-title">
@@ -598,7 +599,7 @@
 							<a href="cases-detail.html" class="text-decoration-none">
 								<span class="thumb-info custom-thumb-info-style-1 thumb-info-hide-wrapper-bg">
 									<span class="thumb-info-wrapper m-0">
-										<img src="img/avatars/51631946797_fb15be0773_b-1024x695.jpg" class="img-fluid" alt="">
+										<img src="img/APC_5394 2.jpg" class="img-fluid" alt="">
 									</span>
 									<span class="thumb-info-caption bg-color-secondary p-4 pt-5 pb-5">
 										<span class="custom-thumb-info-title">
@@ -615,7 +616,7 @@
 							<a href="cases-detail.html" class="text-decoration-none">
 								<span class="thumb-info custom-thumb-info-style-1 thumb-info-hide-wrapper-bg">
 									<span class="thumb-info-wrapper m-0">
-										<img src="img/avatars/aurelie-adam-soule-zoumarou-sourire.jpeg" class="img-fluid" alt="">
+										<img src="img/apc_5387.jpg" class="img-fluid" alt="">
 									</span>
 									<span class="thumb-info-caption bg-color-secondary p-4 pt-5 pb-5">
 										<span class="custom-thumb-info-title">
@@ -631,7 +632,7 @@
 							<a href="cases-detail.html" class="text-decoration-none">
 								<span class="thumb-info custom-thumb-info-style-1 thumb-info-hide-wrapper-bg">
 									<span class="thumb-info-wrapper m-0">
-										<img src="img/avatars/0318840001599217698.jpeg" class="img-fluid" alt="">
+										<img src="img/APC_5330.jpg" class="img-fluid" alt="">
 									</span>
 									<span class="thumb-info-caption bg-color-secondary p-4 pt-5 pb-5">
 										<span class="custom-thumb-info-title">
@@ -646,7 +647,7 @@
 							<a href="cases-detail.html" class="text-decoration-none">
 								<span class="thumb-info custom-thumb-info-style-1 thumb-info-hide-wrapper-bg">
 									<span class="thumb-info-wrapper m-0">
-										<img src="img/avatars/tresors-royaux-france-5.jpg" class="img-fluid" alt="">
+										<img src="img/74.jpg" class="img-fluid" alt="">
 									</span>
 									<span class="thumb-info-caption bg-color-secondary p-4 pt-5 pb-5">
 										<span class="custom-thumb-info-title">
@@ -733,7 +734,7 @@
 													</div>
 												</div>
 												<a href="team-detail.html" class="text-decoration-none">
-													<span class="team-member-name text-color-dark font-weight-semibold text-4">22/04/22</span>
+													<!-- <span class="team-member-name text-color-dark font-weight-semibold text-4">22/04/22</span> -->
 													<span class="team-member-desc font-weight-light">Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet.</span>
 												</a>
 											</div>
@@ -756,7 +757,7 @@
 													</div>
 												</div>
 												<a href="team-detail.html" class="text-decoration-none">
-													<span class="team-member-name text-color-dark font-weight-semibold text-4">22/04/22</span>
+													<!-- <span class="team-member-name text-color-dark font-weight-semibold text-4">22/04/22</span> -->
 													<span class="team-member-desc font-weight-light">Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet.</span>
 												</a>
 											</div>
@@ -779,7 +780,7 @@
 													</div>
 												</div>
 												<a href="team-detail.html" class="text-decoration-none">
-													<span class="team-member-name text-color-dark font-weight-semibold text-4">22/04/22</span>
+													<!-- <span class="team-member-name text-color-dark font-weight-semibold text-4">22/04/22</span> -->
 													<span class="team-member-desc font-weight-light">Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet.</span>
 												</a>
 											</div>
@@ -802,7 +803,7 @@
 													</div>
 												</div>
 												<a href="team-detail.html" class="text-decoration-none">
-													<span class="team-member-name text-color-dark font-weight-semibold text-4">22/04/22</span>
+													<!-- <span class="team-member-name text-color-dark font-weight-semibold text-4">22/04/22</span> -->
 													<span class="team-member-desc font-weight-light">Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet.</span>
 												</a>
 											</div>
@@ -825,7 +826,7 @@
 													</div>
 												</div>
 												<a href="team-detail.html" class="text-decoration-none">
-													<span class="team-member-name text-color-dark font-weight-semibold text-4">22/04/22</span>
+													<!-- <span class="team-member-name text-color-dark font-weight-semibold text-4">22/04/22</span> -->
 													<span class="team-member-desc font-weight-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam, odio autem eveniet maxime nam error qui assumenda repellendus fugiat! Suscipit accusantium, beatae numquam magnam quia reiciendis ad accusamus dignissimos quam?</span>
 												</a>
 											</div>
