--- a/team-detail.html
+++ b/team-detail.html
@@ -38,7 +38,7 @@
 		<link rel="stylesheet" href="css/theme-shop.css">
 
 		<!-- Demo CSS -->
-		<link rel="stylesindex.htmlsiness-consulting.css">
+		<link rel="stylesheet" href="css/demos/demo-business-consulting.css">
 
 		<!-- Skin CSS -->
 		<link id="skinCSS" rel="stylesheet" href="css/skins/skin-business-consulting.css">
@@ -51,7 +51,7 @@
 
 	</head>
 	<body>
-index.html
+
 		<div class="body">
 			<header id="header" class="header-transparent header-transparent-dark-bottom-border header-effect-shrink" data-plugin-options="{'stickyEnabled': true, 'stickyEffect': 'shrink', 'stickyEnableOnBoxed': true, 'stickyEnableOnMobile': false, 'stickyChangeLogo': true, 'stickyStartAt': 30, 'stickyHeaderContainerHeight': 70}">
 				<div class="header-body border-top-0 bg-dark box-shadow-none">
@@ -61,7 +61,7 @@ index.html
 								<div class="header-row">
 									<div class="header-logo">
 										<a href="index.html">
-											<img alt="Porto" width="82" height="40" src="img/logo-default-slim-dark-small.png">
+											<img alt="Porto" width="129" height="83" src="img/logos/logo-t.png">
 										</a>
 									</div>
 								</div>
@@ -73,13 +73,13 @@ index.html
 											<nav class="collapse">
 												<ul class="nav nav-pills" id="mainNav">
 													<li>
-														<a class="nav-link" href="index.html">
-															Home
+														<a class="nav-link active" href="index.html">
+															Accueil
 														</a>
 													</li>
 													<li>
 														<a class="nav-link" href="about-us.html">
-															About Us
+															A propos
 														</a>
 													</li>
 													<li class="dropdown dropdown-primary">
@@ -121,31 +121,31 @@ index.html
 													</li>
 													<li>
 														<a class="nav-link" href="cases.html">
-															Cases
+															Projets
 														</a>
 													</li>
 													<li>
 														<a class="nav-link" href="tertimonials.html">
-															Testimonials
+															Financement
 														</a>
 													</li>
 													<li>
-														<a class="nav-link active" href="team.html">
-															Team
+														<a class="nav-link" href="team.html">
+															Equipes
 														</a>
 													</li>
 													<li>
 														<a class="nav-link" href="blog.html">
-															Blog
+															Actualités
 														</a>
 													</li>
 													<li>
 														<a class="nav-link" href="contact-us.html">
-															Contact Us
+															Contacts
 														</a>
 													</li>
 												</ul>
-											</nav>index.html
+											</nav>
 										</div>
 										<button class="btn header-btn-collapse-nav" data-bs-toggle="collapse" data-bs-target=".header-nav-main nav">
 											<i class="fas fa-bars"></i>
@@ -157,7 +157,7 @@ index.html
 					</div>
 				</div>
 			</header>
-
+			
 			<div role="main" class="main">
 
 				<section class="page-header page-header-modern bg-color-quaternary page-header-md custom-page-header">
@@ -224,47 +224,47 @@ index.html
 					</div>
 				</div>
 
-				<section class="section section-text-light section-background m-0" style="background: url('img/demos/business-consulting/contact/contact-background.jpg'); background-size: cover;">
+				<section class="section section-text-light section-background m-0" style="background: url('img/gallery/wp.png'); background-size: cover;">
 					<div class="container">
 						<div class="row justify-content-md-center">
 							<div class="col-lg-6 mb-5 mb-lg-0">
-								<h2 class="font-weight-bold">- Contact Us</h2>
+								<h2 class="font-weight-bold">Contacts</h2>
 								<p class="custom-opacity-font">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat ex finibus urna tincidunt, auctor ullamcorper.</p>
 								<div class="row">
 									<div class="col-md-6 custom-sm-margin-top">
-										<h4 class="mb-1">Call Us</h4>
+										<h4 class="mb-1">Nous appeler</h4>
 										<a href="tel:+1234567890" class="text-decoration-none" target="_blank" title="Call Us">
 											<span class="custom-call-to-action-2 text-color-light text-2 custom-opacity-font">
-												Phone
+												Télephone
 												<span class="info text-5">
-													123-456-7890
+													+229 21 31 00 52
 												</span>
 											</span>
 										</a>
 									</div>
 									<div class="col-md-6 custom-sm-margin-top">
-										<h4 class="mb-1">Our Location</h4>
-										<p class="custom-opacity-font">Porto Business Consulting 123 Porto Blvd, Suite 100 New York, NY</p>
+										<h4 class="mb-1">Adresse</h4>
+										<p class="custom-opacity-font">Cotonou, Bénin</p>
 									</div>
 								</div>
 								<div class="row">
 									<div class="col-md-6 custom-sm-margin-top">
-										<h4 class="mb-1">Mail Us</h4>
+										<h4 class="mb-1">Nous écrire</h4>
 										<a href="mail:mail@example.com" class="text-decoration-none" target="_blank" title="Mail Us">
 											<span class="custom-call-to-action-2 text-color-light text-2 custom-opacity-font">
 												Email
 												<span class="info text-5">
-													mail@example.com
+													contact@cdcb.bj
 												</span>
 											</span>
 										</a>
 									</div>
 									<div class="col-md-6 custom-sm-margin-top">
-										<h4 class="mb-1">Social Media</h4>
+										<h4 class="mb-1">Réseaux sociaux</h4>
 										<ul class="social-icons social-icons-clean custom-social-icons-style-1 mt-2 custom-opacity-font">
 											<li class="social-icons-facebook">
 												<a href="http://www.facebook.com/" target="_blank" title="Facebook">
-													<i class="fab fa-facebook-f"></i>
+													<i class="fas fa-angle-right"></i>
 												</a>
 											</li>
 											<li class="social-icons-twitter">
@@ -287,7 +287,7 @@ index.html
 								</div>
 							</div>
 							<div class="col-lg-6 custom-sm-margin-top">
-								<h2 class="font-weight-bold">- Write Us</h2>
+								<h2 class="font-weight-bold">Newsletter</h2>
 								<form class="contact-form custom-contact-form-style-1 form-errors-light" action="php/contact-form.php" method="POST">
 									<div class="contact-form-success alert alert-success d-none mt-4">
 										<strong>Success!</strong> Your message has been sent to us.
@@ -303,7 +303,7 @@ index.html
 										<div class="form-group col">
 											<div class="custom-input-box">
 												<i class="icon-user icons text-color-primary"></i>
-												<input type="text" value="" data-msg-required="Please enter your name." maxlength="100" class="form-control" name="name" placeholder="Name*" required>
+												<input type="text" value="" data-msg-required="Please enter your name." maxlength="100" class="form-control" name="name" placeholder="Nom*" required>
 											</div>
 										</div>
 									</div>
@@ -325,7 +325,7 @@ index.html
 									</div>
 									<div class="row">
 										<div class="form-group col">
-											<input type="submit" value="Submit Now" class="btn btn-outline custom-border-width btn-primary custom-border-radius font-weight-semibold text-uppercase" data-loading-text="Loading...">
+											<input type="submit" value="Envoyer" class="btn btn-outline custom-border-width btn-primary custom-border-radius font-weight-semibold text-uppercase" data-loading-text="Loading...">
 										</div>
 									</div>
 								</form>
@@ -340,7 +340,7 @@ index.html
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-12 text-center pb-4">
-							<p>2022 © Porto <span class="text-color-light">Business Consulting</span> - Copyright All Rights Reserved</p>
+							<p>2022 © CDCB <span class="text-color-light"></span> - Tous droits réservés</p>
 						</div>
 					</div>
 				</div>
