--- a/team.html
+++ b/team.html
@@ -165,7 +165,7 @@
 						<div class="row mt-3">
 							<div class="col-md-8 order-2 order-md-1 align-self-center p-static">
 								<h1>Equipes</h1>
-								<span class="d-block text-4">Les publications</span>
+								<!-- <span class="d-block text-4">Les publications</span> -->
 							</div>
 							<div class="col-md-4 order-1 order-md-2 align-self-center">
 								<ul class="breadcrumb d-block text-md-end breadcrumb-light">
@@ -206,7 +206,7 @@
 													</div>
 												</div>
 												<a href="team-detail.html" class="text-decoration-none">
-													<span class="team-member-name text-color-dark font-weight-semibold text-4">22/04/22</span>
+													<!-- <span class="team-member-name text-color-dark font-weight-semibold text-4">22/04/22</span> -->
 													<span class="team-member-desc font-weight-light">Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet.</span>
 												</a>
 											</div>
@@ -229,7 +229,7 @@
 													</div>
 												</div>
 												<a href="team-detail.html" class="text-decoration-none">
-													<span class="team-member-name text-color-dark font-weight-semibold text-4">22/04/22</span>
+													<!-- <span class="team-member-name text-color-dark font-weight-semibold text-4">22/04/22</span> -->
 													<span class="team-member-desc font-weight-light">Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet.</span>
 												</a>
 											</div>
@@ -252,7 +252,7 @@
 													</div>
 												</div>
 												<a href="team-detail.html" class="text-decoration-none">
-													<span class="team-member-name text-color-dark font-weight-semibold text-4">22/04/22</span>
+													<!-- <span class="team-member-name text-color-dark font-weight-semibold text-4">22/04/22</span> -->
 													<span class="team-member-desc font-weight-light">Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet.</span>
 												</a>
 											</div>
@@ -275,7 +275,7 @@
 													</div>
 												</div>
 												<a href="team-detail.html" class="text-decoration-none">
-													<span class="team-member-name text-color-dark font-weight-semibold text-4">22/04/22</span>
+													<!-- <span class="team-member-name text-color-dark font-weight-semibold text-4">22/04/22</span> -->
 													<span class="team-member-desc font-weight-light">Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet.</span>
 												</a>
 											</div>
@@ -298,7 +298,7 @@
 													</div>
 												</div>
 												<a href="team-detail.html" class="text-decoration-none">
-													<span class="team-member-name text-color-dark font-weight-semibold text-4">22/04/22</span>
+													<!-- <span class="team-member-name text-color-dark font-weight-semibold text-4">22/04/22</span> -->
 													<span class="team-member-desc font-weight-light">Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet.</span>
 												</a>
 											</div>
