--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<link id="skinCSS" rel="stylesheet" href="css/skins/skin-business-consulting.css">
 
 		<!-- Theme Custom CSS -->
-		<link rel="stylesheet" href="css/custom.css">
+		<link rel="stylesheet" href="css/custom.v2.css">
 
 		<link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 		
